Fix DemoSessionMetricsRecorderTest.BrowserWindows for Mash

In Mash, ShelfWindowWatcher tags unidentified windows with a
default App ID rather than leaving the App ID blank. Update the
test to reflect that.

Bug: 880595
Change-Id: I844c4729b69c956fffd6a3acae1932f13e700158
Reviewed-on: https://chromium-review.googlesource.com/1208727
Commit-Queue: Evan Stade <estade@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Reviewed-by: Michael Giuffrida <michaelpg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589174}
Former-commit-id: 84738a38f22b0bbc3cfe2a4f91186b768adaab84