ash/metrics/demo_session_metrics_recorder.cc
@@ -10,6 +10,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "ash/public/cpp/app_types.h"
 #include "ash/public/cpp/window_properties.h"
+#include "ash/shelf/shelf_window_watcher.h"
 #include "ash/shell.h"
 #include "base/metrics/histogram_macros.h"
 #include "base/time/time.h"
@@ -18,6 +19,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/aura/client/aura_constants.h"
 #include "ui/aura/client/window_types.h"
 #include "ui/aura/window.h"
+#include "ui/base/ui_base_features.h"
 #include "ui/base/user_activity/user_activity_detector.h"
 #include "ui/wm/public/activation_client.h"
 
@@ -105,10 +107,18 @@ DemoModeApp GetAppFromWindow(const aura::Window* window) {
   if (app_id == extension_misc::kChromeAppId)
     return DemoModeApp::kBrowser;
 
-  // If the window is the "browser" type, having an app ID other than
-  // kChromeAppId indicates a hosted/bookmark app.
+  auto is_default = [](const std::string& app_id) {
+    if (!features::IsUsingWindowService())
+      return app_id.empty();
+
+    return base::StartsWith(app_id, ShelfWindowWatcher::kDefaultShelfIdPrefix,
+                            base::CompareCase::SENSITIVE);
+  };
+
+  // If the window is the "browser" type, having an app ID other than the
+  // default indicates a hosted/bookmark app.
   if (app_type == ash::AppType::CHROME_APP ||
-      (app_type == ash::AppType::BROWSER && app_id.size())) {
+      (app_type == ash::AppType::BROWSER && !is_default(app_id))) {
     return GetAppFromAppId(app_id);
   }
 
