ash/shelf/shelf_window_watcher.h
@@ -29,6 +29,8 @@ class ShelfWindowWatcher : public ::wm::ActivationChangeObserver,
   explicit ShelfWindowWatcher(ShelfModel* model);
   ~ShelfWindowWatcher() override;
 
+  static const char kDefaultShelfIdPrefix[];
+
  private:
   // Observes for windows being added to a root window's default container.
   class ContainerWindowObserver : public aura::WindowObserver {
